--- a/m_designer/src/components/Canvas.css
+++ b/m_designer/src/components/Canvas.css
@@ -1,9 +1,11 @@
-/* src/components/Canvas.css */
+.canvas-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .canvas {
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-  }
-  .node-source {
-    border: 2px solid blue;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
